--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
   "devDependencies": {
     "@babel/core": "^7.8.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
+    "@swc/core": "^1.3.3",
     "@tarojs/cli": "3.6.18",
     "@tarojs/taro-loader": "3.6.18",
     "@tarojs/webpack5-runner": "3.6.18",
